# ase

./: .gitignore  .gitlab-ci.yml  .travis.yml  MANIFEST.in  README.rst  asdasd  extxyz.py  io.csv  pyproject.toml  ruff.toml  setup.py  teest.ipynb  test  test_crystal.db
ase/: __init__.py  atom.py  atoms.py  atomsdata.py  autoneb.py  cell.py  codes.py  config.py  constraints.py  dependencies.py  deprecate.py  dimer.py  eos.py  filters.py  formula.py  lammpsatoms.py  lammpsquaternions.py  neb.py  neighborlist.py  nomad.py  numbers.py  outputs.py  parallel.py  phasediagram.py  phonons.py  plotting.py  quaternions.py  rneb.py  stress.py  symbols.py  thermochemistry.py  topoatoms.py  topology.py  topoquarternions.py  units.py
ase/calculators/: abc.py  abinit.py  acemolecule.py  acn.py  aims.py  amber.py  autodetect.py  bond_polarizability.py  calculator.py  castep.py  castep2.py  castep_generic.py  checkpoint.py  combine_mm.py  conquest.py  counterions.py  cp2k.py  crystal.py  demonnano.py  dftb.py  dftd3.py  dmol.py  eam.py  elk.py  emt.py  espresso.py  excitation_list.py  exciting.py  ff.py  fleur.py  gamess_us.py  gaussian.py  general.py  genericfileio.py  gromacs.py  gulp.py  h2morse.py  harmonic.py  idealgas.py  lammpslib.py  (+38 more)
ase/ce/: __init__.py  basis_function.py  convexhull.py  corrFunc.py  evaluate.py  interactive_plot.py  job.py  job_template.py  jobscript_template.py  newStruct.py  probestructure.py  settings.py  settings_bulk.py  simulatedannealing.py  structureComparator.py  structure_comparator.py  tools.py
ase/clease/: __init__.py  basis_function.py  bayesian_compressive_sensing.py  concentration.py  convexhull.py  corrFunc.py  evaluate.py  floating_point_classification.py  (+15 more)
doc/: conf.py  ecosystem.rst  index.rst  install.rst  otherprojects.rst  releasenotes.rst
tools/: read_cp2k_pos.py
(+8430 files in other folders)
